<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <groupId>org.foolish</groupId>
  <artifactId>foolish-parent</artifactId>
  <version>1.0-SNAPSHOT</version>
  <packaging>pom</packaging>

  <modules>
    <module>foolish-parser-java</module>
    <module>foolish-core-java</module>
    <module>foolish-core-scala</module>
    <module>foolish-lsp-java</module>
    <module>foolish-crossvalidation</module>
  </modules>

  <properties>
    <maven.compiler.source>25</maven.compiler.source>
    <maven.compiler.target>25</maven.compiler.target>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <antlr4.version>4.13.2</antlr4.version>
    <junit.platform.version>1.13.4</junit.platform.version>
    <jackson.version>2.17.2</jackson.version>
    <scala.version>3.8.1</scala.version>
    <scala.binary.version>3</scala.binary.version>
    <antlr.language>Java</antlr.language>
    <antlr.skip>false</antlr.skip>
    <antlr.rust.tool.url>https://github.com/rrevenantt/antlr4rust/releases/download/antlr4-4.8-2-Rust0.3.0-beta/antlr4-4.8-2-SNAPSHOT-complete.jar</antlr.rust.tool.url>
    <antlr.rust.tool.jar>${project.build.directory}/antlr-rust/antlr4-4.8-2-SNAPSHOT-complete.jar</antlr.rust.tool.jar>
  </properties>

  <dependencyManagement>
    <dependencies>
      <!-- ANTLR runtime -->
      <dependency>
        <groupId>org.antlr</groupId>
        <artifactId>antlr4-runtime</artifactId>
        <version>${antlr4.version}</version>
      </dependency>
      <!-- JUnit Platform Console Standalone -->
      <dependency>
        <groupId>org.junit.platform</groupId>
        <artifactId>junit-platform-console-standalone</artifactId>
        <version>${junit.platform.version}</version>
        <scope>test</scope>
      </dependency>

      <!-- ApprovalTests for snapshot-based testing -->
      <dependency>
        <groupId>com.approvaltests</groupId>
        <artifactId>approvaltests</artifactId>
        <version>26.6.0</version>
        <scope>test</scope>
      </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-engine</artifactId>
            <version>6.0.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-params</artifactId>
            <version>6.0.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter-api</artifactId>
            <version>6.0.2</version>
            <scope>test</scope>
        </dependency>
        <dependency>
          <groupId>org.apache.commons</groupId>
          <artifactId>commons-lang3</artifactId>
          <version>3.20.0</version>
  	</dependency>
        <!-- Scala Library -->
        <dependency>
            <groupId>org.scala-lang</groupId>
            <artifactId>scala3-library_3</artifactId>
            <version>${scala.version}</version>
        </dependency>
        <!-- ScalaTest for testing -->
        <dependency>
            <groupId>org.scalatest</groupId>
            <artifactId>scalatest_3</artifactId>
            <version>3.2.19</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
  </dependencyManagement>

  <build>
    <pluginManagement>
      <plugins>
        <!-- ANTLR4 Maven Plugin for grammar generation -->
        <plugin>
          <groupId>org.antlr</groupId>
          <artifactId>antlr4-maven-plugin</artifactId>
          <version>${antlr4.version}</version>
        </plugin>

        <!-- Compiler plugin -->
        <plugin>
          <artifactId>maven-compiler-plugin</artifactId>
          <version>3.14.0</version>
          <configuration>
            <source>${maven.compiler.source}</source>
            <target>${maven.compiler.target}</target>
          </configuration>
        </plugin>

        <!-- Add generated sources to compilation -->
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>build-helper-maven-plugin</artifactId>
	  <version>3.6.1</version>
        </plugin>

        <!-- Scala compiler plugin -->
        <plugin>
          <groupId>net.alchim31.maven</groupId>
          <artifactId>scala-maven-plugin</artifactId>
	  <version>4.9.9</version>
	  <configuration><jvmArgs><jvmArg>--sun-misc-unsafe-memory-access=allow</jvmArg><jvmArg>--enable-native-access=ALL-UNNAMED </jvmArg></jvmArgs></configuration>
        </plugin>

        <!-- Exec Maven plugin -->
        <plugin>
          <groupId>org.codehaus.mojo</groupId>
          <artifactId>exec-maven-plugin</artifactId>
          <version>3.3.0</version>
	  <configuration><jvmArgs><jvmArg>--sun-misc-unsafe-memory-access=allow</jvmArg><jvmArg>--enable-native-access=ALL-UNNAMED </jvmArg></jvmArgs></configuration>
        </plugin>

        <!-- Maven Surefire plugin -->
        <plugin>
          <artifactId>maven-surefire-plugin</artifactId>
          <version>3.2.5</version>
        </plugin>

        <!-- ScalaTest Maven plugin -->
        <plugin>
          <groupId>org.scalatest</groupId>
          <artifactId>scalatest-maven-plugin</artifactId>
          <version>2.2.0</version>
        </plugin>
      </plugins>
    </pluginManagement>
  </build>
	<profiles>
          <profile>
                <id>all-tests</id>
                <activation>
                        <activeByDefault>true</activeByDefault>
                </activation>
                <build> <plugins> <plugin> <artifactId>maven-surefire-plugin</artifactId> <version>3.2.5</version>
		<configuration> 
		    <argLine>--sun-misc-unsafe-memory-access=allow --enable-native-access=ALL-UNNAMED </argLine>
		    <includes> <include>**/*Test.java</include> </includes> 
	        </configuration>
                </plugin> </plugins> </build>
          </profile>
          <profile>
                <id>unit-tests</id>
                <activation>
                        <activeByDefault>false</activeByDefault>
                </activation>
                <build> <plugins> <plugin> <artifactId>maven-surefire-plugin</artifactId> <version>3.2.5</version>
					<configuration>
						<argLine>--sun-misc-unsafe-memory-access=allow --enable-native-access=ALL-UNNAMED </argLine>
						<includes> <include>**/*UnitTest.java</include> </includes> 
					</configuration>
                </plugin> </plugins> </build>
          </profile>
          <profile>
                <id>approval-tests</id>
                <activation>
                        <activeByDefault>false</activeByDefault>
                </activation>
                <build> <plugins> <plugin> <artifactId>maven-surefire-plugin</artifactId> <version>3.2.5</version>
					<configuration> 
						<argLine>--sun-misc-unsafe-memory-access=allow --enable-native-access=ALL-UNNAMED </argLine>
						<includes> <include>**/*ApprovalTest.java</include> </includes> 
					</configuration>
                </plugin> </plugins> </build>
          </profile>
        </profiles>
</project>
